--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <title>Accueil</title>
 </head>
 <body>
-    
+    <div class="nav">
+        <div class="accueil">
+            <p> Accueil </p>
+        </div>
+        <div class="projets">
+            <p> Projets </p>
+        </div>
+        <div class="contact">
+            <p> Contact </p>
+        </div>
+    </div>
 
     <!-- link script jss -->
     <script src="./JS/script.js"></script>
