--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link css -->
     <link rel="stylesheet" href="./CSS/style.css">
+    <!-- link font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Accueil</title>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
 </head>
 <body>
     <div class="nav">
@@ -21,7 +25,17 @@
         </div>
     </div>
 
+    <div class="maintext">
+        <p id="animtxt"></p>
+    </div>
+
+    <div class="arrow">
+        <i class="fas fa-chevron-down"></i>
+    </div>
+
+
     <!-- link script jss -->
     <script src="./JS/script.js"></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 </body>
 </html>
