--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <i class="fas fa-chevron-down"></i>
     </div>
 
+    <div class="mail-container">
+            <input type="text" name="nom" id="nom" placeholder="Votre nom">
+            <input type="email" name="mail" id="mail" placeholder="Votre mail">
+            <textarea type="text" name="message" cols="30" rows="10" id="message" placeholder="Votre message"> </textarea>
+            <input type="button" value="Envoyer" id="Sendbtn">
+    </div>
 
     <!-- link script jss -->
     <script src="./JS/script.js"></script>
