--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <input type="text" name="nom" id="nom" placeholder="Votre nom">
             <input type="email" name="mail" id="mail" placeholder="Votre mail">
             <textarea type="text" name="message" cols="30" rows="10" id="message" placeholder="Votre message"> </textarea>
-            <input type="button" value="Envoyer" id="Sendbtn">
+    </div>
+    <div class="btnsend">
+        <input type="button" value="Envoyer" id="Sendbtn">
     </div>
 
     <!-- link script jss -->
