--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link css -->
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/header.css">
+    <link rel="stylesheet" href="./CSS/mainproject.css">
     <!-- link font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Accueil</title>
@@ -15,7 +16,7 @@
 <body>
     <div class="nav">
         <div class="accueil" id="accueil">
-            <p> Accueil </p>
+            <p onclick="scrollup()"> Accueil </p>
         </div>
         <div class="projets" id="projets">
             <p> Projets </p>
@@ -42,6 +43,10 @@
     <div class="arrow" onclick="scrolldown()">
         <i class="fas fa-chevron-down"></i>
     </div>
+
+    <div class="red"></div>
+    <div class="green"></div>
+
 
     <!-- link script jss -->
     <script src="./JS/script.js"></script>
