--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="red"></div>
     <div class="green"></div>
     <div class="yellow"></div>
+    <div class="orange"></div>
 
 
     <!-- link script jss -->
