--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <i class="fas fa-chevron-down"></i>
     </div>
 
-    <div class="red">
+    <div class="red" id="red">
         <img id="calc" src="./SRC/img/calc.png">
     </div>
     <div class="green">
