--- a/projets/Calculatrice/index.html
+++ b/projets/Calculatrice/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link CSS-->
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="/CSS/header.css">
     <title>Document</title>
 </head>
 <body>
-    <p>oui</p>
+    <div class="nav">
+        <div class="accueil" id="accueil" onclick="scrollup()">
+            <p> Accueil </p>
+        </div>
+        <div class="projets" id="projets">
+            <p> Projets </p>
+        </div>
+        <div class="contact" id="contact" onclick="contactopen()">
+            <p> Contact </p>
+        </div>
+    </div>
+
+    <div class="container">
+        <input type="text" readonly class="affichage"></input>
+        <div class="pav">
+            <div class="pavnum">
+                <button id="num9" value="9"></button>
+                <button id="num8" value="8"></button>
+                <button id="num7" value="7"></button>
+                <button id="num6" value="6"></button>
+                <button id="num5" value="5"></button>
+                <button id="num4" value="4"></button>
+                <button id="num3" value="3"></button>
+                <button id="num2" value="2"></button>
+                <button id="num1" value="1"></button>
+                <button id="num0" value="0"></button>
+            </div>
+            <div class="pavop">
+                <button id="op+" value="+"></button>
+                <button id="op-" value="-"></button>
+                <button id="op*" value="x"></button>
+                <button id="op/" value="/"></button>
+                <button id="op=" value="="></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
