--- a/projets/Calculatrice/index.html
+++ b/projets/Calculatrice/index.html
@@ -25,25 +25,23 @@
     <div class="container">
         <input type="text" readonly class="affichage"></input>
         <div class="pav">
-            <div class="pavnum">
-                <button id="num9" value="9"></button>
-                <button id="num8" value="8"></button>
-                <button id="num7" value="7"></button>
-                <button id="num6" value="6"></button>
-                <button id="num5" value="5"></button>
-                <button id="num4" value="4"></button>
-                <button id="num3" value="3"></button>
-                <button id="num2" value="2"></button>
-                <button id="num1" value="1"></button>
-                <button id="num0" value="0"></button>
-            </div>
-            <div class="pavop">
-                <button id="op+" value="+"></button>
-                <button id="op-" value="-"></button>
-                <button id="op*" value="x"></button>
-                <button id="op/" value="/"></button>
-                <button id="op=" value="="></button>
-            </div>
+                <button id="num9" value="9">9</button>
+                <button id="num8" value="8">8</button>
+                <button id="num7" value="7">7</button>
+                <button id="num6" value="6">6</button>
+                <button id="num5" value="5">5</button>
+                <button id="num4" value="4">4</button>
+                <button id="num3" value="3">3</button>
+                <button id="num2" value="2">2</button>
+                <button id="num1" value="1">1</button>
+                <button id="num0" value="0">0</button>
+
+                <button id="opplus" value="+">+</button>
+                <button id="opmoins" value="-">-</button>
+                <button id="opfois" value="x">x</button>
+                <button id="opdiv" value="/">/</button>
+                <button id="opegal" value="=">=</button>
+                <button id="opvirgule" value=",">,</button>
         </div>
     </div>
 </body>
