--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         <i class="fas fa-chevron-down"></i>
     </div>
 
-    <div class="red" id="red">
-        <img id="calc" src="./SRC/img/calc.png">
+    <div class="calc">
+        <img id="imgcalc" src="./SRC/img/calc.png">
     </div>
-    <div class="green">
-        <img id="globe" src="./SRC/img/history.png">
+    <div class="globe">
+        <img id="imgglobe" src="./SRC/img/history.png">
     </div>
-    <div class="yellow">
-        <img id="tetris" src="./SRC/img/tetris.png">
+    <div class="phone" id="phone" onclick="tpphone()">
+        <img id="imgphone" src="./SRC/img/phone.png">
     </div>
-    <div class="orange">
-        <img src="./SRC/img/meteo.png" id="meteo" alt="">
+    <div class="meteo">
+        <img id="imgmeteo" src="./SRC/img/meteo.png">
     </div>
 
 
