--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- link css -->
     <link rel="stylesheet" href="./CSS/header.css">
     <link rel="stylesheet" href="./CSS/mainproject.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <!-- link font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Accueil</title>
@@ -44,7 +45,7 @@
         <i class="fas fa-chevron-down"></i>
     </div>
 
-    <div class="calc">
+    <!-- <div class="calc">
         <img id="imgcalc" src="./SRC/img/calc.png">
     </div>
     <div class="globe">
@@ -55,7 +56,66 @@
     </div>
     <div class="meteo">
         <img id="imgmeteo" src="./SRC/img/meteo.png">
-    </div>
+    </div> -->
+
+    <section>
+        <div class="box">
+            <h3>Liste de mes projets</h3>
+            <div class="list">
+                <div class="imgBx">
+                    <img src="./SRC/img/circular.png" alt="">
+                </div>
+                <div class="content">
+                    <h2 class="rank"><small>#</small>1</h2>
+                    <h4>Menu Circulaire</h4>
+                    <p>Non Responsive</p>
+                </div>
+            </div> 
+            <div class="list">
+                <div class="imgBx">
+                    <img src="./SRC/img/navbar.png" alt="">
+                </div>
+                <div class="content">
+                    <h2 class="rank"><small>#</small>2</h2>
+                    <h4>Navbar mobile</h4>
+                    <p>Responsive (fais pour mobile)</p>
+                </div>
+            </div>
+
+            <div class="list">
+                <div class="imgBx">
+                    <img src="./SRC/img/selection.png" alt="">
+                </div>
+                <div class="content">
+                    <h2 class="rank"><small>#</small>3</h2>
+                    <h4>Selection</h4>
+                    <p>Responsive</p>
+                </div>
+            </div>
+
+            <div class="list">
+                <div class="imgBx">
+                    <img src="img/img4.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h2 class="rank"><small>#</small>4</h2>
+                    <h4>Christina Shaw</h4>
+                    <p>Photoshop Expert</p>
+                </div>
+            </div>
+
+            <div class="list">
+                <div class="imgBx">
+                    <img src="img/img5.jpg" alt="">
+                </div>
+                <div class="content">
+                    <h2 class="rank"><small>#</small>5</h2>
+                    <h4>Christina Shaw</h4>
+                    <p>Photoshop Expert</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- link script jss -->
