--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
 
-            <div class="list">
+            <!-- <div class="list">
                 <div class="imgBx">
                     <img src="img/img4.jpg" alt="">
                 </div>
@@ -113,7 +113,7 @@
                     <h4>Christina Shaw</h4>
                     <p>Photoshop Expert</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
