--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- <div class="calc">
         <img id="imgcalc" src="./SRC/img/calc.png">
-    </div>
+    </div> fdfd
     <div class="globe">
         <img id="imgglobe" src="./SRC/img/history.png">
     </div>
