--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section>
         <div class="box">
             <h3>Liste de mes projets</h3>
-            <div class="list">
+            <div class="list" onclick="window.location.href='./projets/Circular Navigation Menu/index.html'">
                 <div class="imgBx">
                     <img src="./SRC/img/circular.png" alt="">
                 </div>
@@ -79,28 +79,6 @@
                     <p>Responsive</p>
                 </div>
             </div>
-
-            <!-- <div class="list">
-                <div class="imgBx">
-                    <img src="img/img4.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h2 class="rank"><small>#</small>4</h2>
-                    <h4>Christina Shaw</h4>
-                    <p>Photoshop Expert</p>
-                </div>
-            </div>
-
-            <div class="list">
-                <div class="imgBx">
-                    <img src="img/img5.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h2 class="rank"><small>#</small>5</h2>
-                    <h4>Christina Shaw</h4>
-                    <p>Photoshop Expert</p>
-                </div>
-            </div> -->
         </div>
     </section>
 
