--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section>
         <div class="box">
             <h3>Liste de mes projets</h3>
-            <div class="list" onclick="alert='oui'">
+            <div class="list" onclick="alert('oui')">
                 <div class="imgBx">
                     <img src="./SRC/img/circular.png" alt="">
                 </div>
