--- a/index.html
+++ b/index.html
@@ -48,33 +48,33 @@
     <section>
         <div class="box">
             <h3>Liste de mes projets</h3>
-            <div class="list" onclick="alert('oui')">
+            <div class="list" onclick="window.location.href='./projets/Circular Navigation Menu/index.html'">
                 <div class="imgBx">
                     <img src="./SRC/img/circular.png" alt="">
                 </div>
                 <div class="content">
-                    <h2 class="rank"><small>#</small>1</h2>
+                    <!-- <h2 class="rank"><small>#</small>1</h2> -->
                     <h4>Menu Circulaire</h4>
                     <p>Non Responsive</p>
                 </div>
             </div> 
-            <div class="list">
+            <div class="list" onclick="window.location.href='./projets/Nav Bar Mobile/index.html'">
                 <div class="imgBx">
                     <img src="./SRC/img/navbar.png" alt="">
                 </div>
                 <div class="content">
-                    <h2 class="rank"><small>#</small>2</h2>
+                    <!-- <h2 class="rank"><small>#</small>2</h2> -->
                     <h4>Navbar mobile</h4>
                     <p>Responsive (fais pour mobile)</p>
                 </div>
             </div>
 
-            <div class="list">
+            <div class="list" onclick="window.location.href='./projets/Section/index.html'">
                 <div class="imgBx">
                     <img src="./SRC/img/selection.png" alt="">
                 </div>
                 <div class="content">
-                    <h2 class="rank"><small>#</small>3</h2>
+                    <!-- <h2 class="rank"><small>#</small>3</h2> -->
                     <h4>Selection</h4>
                     <p>Responsive</p>
                 </div>
