--- a/projets/Section/index.html
+++ b/projets/Section/index.html
@@ -15,7 +15,7 @@
                 <ion-icon name="color-palette-outline"></ion-icon>
             </div>
             <div class="content">
-                <h2>Design</h2>
+                <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quod laborum quae cum dicta ?</p>
             </div>
         </div>
@@ -24,7 +24,7 @@
                 <ion-icon name="code-outline"></ion-icon>
             </div>
             <div class="content">
-                <h2>Developement</h2>
+                <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quod laborum quae cum dicta ?</p>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 <ion-icon name="search-outline"></ion-icon>
             </div>
             <div class="content">
-                <h2>Recherches</h2>
+                <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quod laborum quae cum dicta ?</p>
             </div>
         </div>
@@ -42,7 +42,7 @@
                 <ion-icon name="podium-outline"></ion-icon>
             </div>
             <div class="content">
-                <h2>Graphiques</h2>
+                <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quod laborum quae cum dicta ?</p>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 <ion-icon name="videocam-outline"></ion-icon>
             </div>
             <div class="content">
-                <h2>Videos</h2>
+                <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quod laborum quae cum dicta ?</p>
             </div>
         </div>
@@ -60,7 +60,7 @@
                 <ion-icon name="game-controller-outline"></ion-icon>
             </div>
             <div class="content">
-                <h2>Gaming</h2>
+                <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, quod laborum quae cum dicta ?</p>
             </div>
         </div>
