--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 </head>
 <body>
     <div class="nav">
-        <div class="accueil" id="accueil" onclick="scrollup()">
-            <p> Accueil </p>
+         <div class="accueil" id="accueil" onclick="scrollup()">
+            <p> <i class="fas fa-home"></i> </p>
         </div>
+        <!--
         <div class="projets" id="projets">
             <p> Projets </p>
-        </div>
-        <div class="contact" id="contact" onclick="contactopen()">
-            <p> Contact </p>
+        </div> -->
+        <div class="contact" id="contact" onclick="window.location.href='mailto:baptiste.nautre@hotmail.fr'">
+            <p> <i class="far fa-paper-plane"></i> </p>
         </div>
     </div>
 
@@ -31,15 +32,15 @@
         <p id="animtxt"></p>
     </div>
 
-    <div class="mail-container" id="mailcontainer">
+    <!-- <div class="mail-container" id="mailcontainer">
         <i class="fas fa-times" id="croix" onclick="contactclose()"></i>
         <input type="text" name="nom" id="nom" placeholder="Votre nom">
         <input type="email" name="mail" id="mail" placeholder="Votre mail">
         <textarea type="text" name="message" cols="30" rows="10" id="message" placeholder="Votre message"> </textarea>
-    </div>
-    <div class="btnsend" id="btnsend">
+    </div> -->
+    <!-- <div class="btnsend" id="btnsend">
         <input type="button" value="Envoyer" id="Sendbtn">
-    </div>
+    </div> -->
 
     <div class="arrow" onclick="scrolldown()">
         <i class="fas fa-chevron-down"></i>
