--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
                     <p>Responsive</p>
                 </div>
             </div>
+
+            <div class="list" onclick="window.location.href='./projets/CV/index.html'">
+                <div class="imgBx">
+                    <img src="./SRC/img/cv.png" alt="">
+                </div>
+                <div class="content">
+                    <!-- <h2 class="rank"><small>#</small>3</h2> -->
+                    <h4>CV</h4>
+                    <p>PDF</p>
+                </div>
+            </div>
         </div>
     </section>
 
