--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                     <img src="./SRC/img/circular.png" alt="">
                 </div>
                 <div class="content">
-                    <!-- <h2 class="rank"><small>#</small>1</h2> -->
                     <h4>Menu Circulaire</h4>
                     <p>Non Responsive</p>
                 </div>
@@ -64,7 +63,6 @@
                     <img src="./SRC/img/navbar.png" alt="">
                 </div>
                 <div class="content">
-                    <!-- <h2 class="rank"><small>#</small>2</h2> -->
                     <h4>Navbar mobile</h4>
                     <p>Responsive (fais pour mobile)</p>
                 </div>
@@ -75,9 +73,18 @@
                     <img src="./SRC/img/selection.png" alt="">
                 </div>
                 <div class="content">
-                    <!-- <h2 class="rank"><small>#</small>3</h2> -->
                     <h4>Selection</h4>
                     <p>Responsive</p>
+                </div>
+            </div>
+
+            <div class="list" onclick="window.location.href='./projets/Dots/index.html'">
+                <div class="imgBx">
+                    <img src="./SRC/img/dots.png" alt="">
+                </div>
+                <div class="content">
+                    <h4>Multi Bouttons</h4>
+                    <p>Non Responsive</p>
                 </div>
             </div>
 
@@ -86,7 +93,6 @@
                     <img src="./SRC/img/cv.png" alt="">
                 </div>
                 <div class="content">
-                    <!-- <h2 class="rank"><small>#</small>3</h2> -->
                     <h4>CV</h4>
                     <p>PDF</p>
                 </div>
