--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <img src="./SRC/img/dots.png" alt="">
                 </div>
                 <div class="content">
-                    <h4>Multi Bouttons</h4>
+                    <h4>Multi Boutons</h4>
                     <p>Non Responsive</p>
                 </div>
             </div>
