--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <p id="animtxt"></p>
     </div>
 
+    <div class="boule" style="--i:1"></div>
+    <div class="boule2" style="--i:1.5"></div>
+
     <!-- <div class="mail-container" id="mailcontainer">
         <i class="fas fa-times" id="croix" onclick="contactclose()"></i>
         <input type="text" name="nom" id="nom" placeholder="Votre nom">
