--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <i class="fas fa-chevron-down"></i>
     </div>
 
-    <section>
+    <section id="section">
         <div class="box">
             <h3>Liste de mes projets</h3>
             <div class="list" onclick="window.location.href='./projets/Circular Navigation Menu/index.html'">
