--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p id="animtxt"></p>
     </div>
 
-    <div class="boule" style="--i:1"></div>
-    <div class="boule2" style="--i:1.5"></div>
+    <div class="boule" style="--i:1" id="bouboule"></div>
+    <div class="boule2" style="--i:1.5" id="bouboule2"></div>
 
     <div class="arrow" onclick="scrolldown()">
         <i class="fas fa-chevron-down"></i>
