--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="./CSS/mainproject.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <!-- link font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Accueil</title>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://kit.fontawesome.com/49b1502e5f.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -28,8 +29,8 @@
         <p id="animtxt"></p>
     </div>
 
-    <div class="boule" style="--i:1" id="bouboule"></div>
-    <div class="boule2" style="--i:1.5" id="bouboule2"></div>
+    <div class="boule" style="--i:1.25; --s:2.5" id="bouboule"></div>
+    <div class="boule2" style="--i:-1; --s:2" id="bouboule2"></div>
 
     <div class="arrow" onclick="scrolldown()">
         <i class="fas fa-chevron-down"></i>
@@ -77,21 +78,28 @@
                 </div>
             </div>
 
-            <div class="list" onclick="window.location.href='./projets/CV/index.html'">
+            <div class="list" onclick="window.location.href='./projets/Profil Generator/index.html'">
                 <div class="imgBx">
-                    <img src="./SRC/img/cv.png" alt="">
+                    <img src="./SRC/img/cat.png" alt="">
                 </div>
                 <div class="content">
-                    <h4>CV</h4>
-                    <p>PDF</p>
+                    <h4>Cat Generator</h4>
+                    <p>Non Responsive</p>
                 </div>
             </div>
         </div>
     </section>
 
+    <div class="cv" id="cv">
+        <a href="./SRC/Fichier/CV.pdf">cv</p>
+    </div>
+
+    
 
     <!-- link script jss -->
     <script src="./JS/script.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </body>
 </html>
