--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
 
-            <div class="list" onclick="window.location.href='./projets/Profil Generator/index.html'">
+            <div class="list" onclick="window.location.href='./projets/Cat Generator/index.html'">
                 <div class="imgBx">
                     <img src="./SRC/img/cat.png" alt="">
                 </div>
