--- a/projets/Cat Generator/index.html
+++ b/projets/Cat Generator/index.html
@@ -13,19 +13,16 @@
         <img src="" id="cat1" alt="">
     </div>
 
-    <div class="maintxt">
-        <p>Cat Profil Generator</p>
+    <div class="refresh" id="refresh" >
+        <ion-icon name="refresh-outline"></ion-icon>
     </div>
 
     <div class="cat2">
         <img src="" id="cat2" alt="">
     </div>
 
-    <div class="arrow">
-        
-    </div>
-
-
     <script src="script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
 </body>
 </html>
