--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link css -->
     <link rel="stylesheet" href="./CSS/header.css">
-    <link rel="stylesheet" href="./CSS/mainproject.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <!-- link font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -87,6 +86,17 @@
                     <p>Non Responsive</p>
                 </div>
             </div>
+
+            <div class="list" onclick="window.location.href='./projets/OREUS/index.html'">
+                <div class="imgBx">
+                    <img src="./SRC/img/earth.png" alt="">
+                </div>
+                <div class="content">
+                    <h4>OREUS</h4>
+                    <p>Responsive - Jeu Mobile (Alpha 1.0)</p>
+                </div>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -100,6 +110,6 @@
     <script src="./JS/script.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script> 
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
