--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
     <section id="section">
         <div class="box">
             <h3>Liste de mes projets</h3>
+
+            <div class="list" onclick="window.location.href='./projets/OREUS/index.html'">
+                <div class="imgBx">
+                    <img src="./SRC/img/earth.png" alt="">
+                </div>
+                <div class="content">
+                    <h4>OREUS</h4>
+                    <p>Responsive - Jeu Mobile (Alpha 1.0)</p>
+                </div>
+                </a>
+            </div>
+
+            <div class="list" onclick="window.location.href='./projets/Cat Generator/index.html'">
+                <div class="imgBx">
+                    <img src="./SRC/img/cat.png" alt="">
+                </div>
+                <div class="content">
+                    <h4>Cat Generator</h4>
+                    <p>Non Responsive (Appel d'API)</p>
+                </div>
+            </div>
+
             <div class="list" onclick="window.location.href='./projets/Circular Navigation Menu/index.html'">
                 <div class="imgBx">
                     <img src="./SRC/img/circular.png" alt="">
@@ -47,6 +69,7 @@
                     <p>Non Responsive</p>
                 </div>
             </div> 
+
             <div class="list" onclick="window.location.href='./projets/Nav Bar Mobile/index.html'">
                 <div class="imgBx">
                     <img src="./SRC/img/navbar.png" alt="">
@@ -75,27 +98,6 @@
                     <h4>Multi Boutons</h4>
                     <p>Non Responsive</p>
                 </div>
-            </div>
-
-            <div class="list" onclick="window.location.href='./projets/Cat Generator/index.html'">
-                <div class="imgBx">
-                    <img src="./SRC/img/cat.png" alt="">
-                </div>
-                <div class="content">
-                    <h4>Cat Generator</h4>
-                    <p>Non Responsive</p>
-                </div>
-            </div>
-
-            <div class="list" onclick="window.location.href='./projets/OREUS/index.html'">
-                <div class="imgBx">
-                    <img src="./SRC/img/earth.png" alt="">
-                </div>
-                <div class="content">
-                    <h4>OREUS</h4>
-                    <p>Responsive - Jeu Mobile (Alpha 1.0)</p>
-                </div>
-                </a>
             </div>
         </div>
     </section>
